# sms-spam-detection

./: .gitignore  LICENSE  README.md  download.py  pyproject.toml  requirements.txt  train_model.py
data/processed/: cleaned_data.csv
models/: spam_classifier.pkl  tfidf_vectorizer.pkl
notebooks/: 01_data_exploration.ipynb  02_preprocessing.ipynb  03_model_training.ipynb
src/: config.py  data_preprocessing.py  feature_engineering.py  model_training.py  utils.py
streamlit_app/: app.py
tests/: test_model.py  test_preprocessing.py
